--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "mongoose": "^5.3.12",
     "random-key": "^0.3.2",
     "restify": "^7.2.3"
+  },
+  "engines": {
+    "node": "8.11.4"
   }
 }
