--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Vishal Sherathiya <vishalsherathiya@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "isvalid": "^1.6.6",
     "mongoose": "^5.3.12",
     "random-key": "^0.3.2",
