--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "Vishal Sherathiya <vishalsherathiya@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "isvalid": "^1.6.6",
     "mongoose": "^5.3.12",
-    "random-key": "^0.3.2",
-    "restify": "^7.2.3"
+    "random-key": "^0.3.2"
   },
   "engines": {
     "node": "8.11.4"
